# learn_qwen2_5_vl

./: .gitignore  Cargo.toml  README.md  test_conv3d.py  test_merge.py
src/: lib.rs  main.rs
src/qwen2_5_vl/: config.rs  mod.rs  processor.rs  qwen2_5_vl_model.rs  rope.rs  text_model.rs  utils.rs  vision_model.rs
