[package]
name = "qwen_2_5_vl"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", features = ["cuda"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", features = ["cuda"] }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", features = ["cuda"]  }
candle-flash-attn = { git = "https://github.com/huggingface/candle.git" }
ffmpeg-next = "8.0.0"
image = "0.25.6"
minijinja = "2.12.0"
num = "0.4.3"
reqwest = { version = "0.12.23", features = ["blocking"] }
serde = "1.0.219"
serde_json = "1.0.143"
tokenizers = "0.22.0"
